--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,10 @@ body {
   .nav-item {
     @apply px-4 py-1.5 rounded-full text-white/70 text-sm font-semibold hover:bg-white/10 transition duration-300 hover:text-white;
   }
+
+  .nav-item-sm {
+    @apply text-white text-lg hover:bg-white/10 transition duration-300 hover:text-white px-2.5 py-1 rounded-xl;
+  }
 }
 
 @layer utilities {
